[package]
name = "sqlitemap"
version = "0.1.0"
description = "An alternative map implementation, backed by a sqlite database"
readme = "README.md"
license-file = "LICENSE"
authors = ["Taylor C. Richberger <Taywee@gmx.com>"]

[dependencies]
rusqlite = "0.13"

[dev_dependencies]
serde_json = '1.0'
serde = '1.0'
serde_derive = '1.0'
flate2 = '1.0'
